[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate==1.10.0",
    "bitsandbytes==0.47.0",
    "click>=8.3.1",
    "datasets==4.0.0",
    "evaluate>=0.4.6",
    "huggingface-hub==0.34.4",
    "matplotlib==3.10.0",
    "nltk>=3.9.2",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "peft==0.17.0",
    "rouge-score>=0.1.2",
    "safetensors==0.6.2",
    "transformers==4.55.2",
    "trl==0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
